--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stratagem Hero</title>
-    <link rel="icon" href="/favicon.c5a274bb.svg" type="image/svg+xml">
-    <link rel="manifest" href="/up_/public/manifest.webmanifest">
-    <script src="/index.2d3ace14.js" defer=""></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Stratagem Hero</title><link rel="icon" href="/stratagem-hero/favicon.4e0f6009.svg" type="image/svg+xml"><link rel="manifest" href="/stratagem-hero/up_/public/manifest.webmanifest"><script type="module" src="/stratagem-hero/index.runtime.bb5670c0.js"></script><script type="module" src="/stratagem-hero/index.93db1aaf.js"></script></head><body> <div id="root"></div> </body></html>
